--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/vite": "^4.1.8",
+    "electron-log": "^5.4.1",
     "node-hid": "^3.2.0",
     "node-simconnect": "^4.0.0",
     "vue": "^3.4.21"
